integration-tests/src/test-cases/parse-error-invalid-let-syntax/expected
parse error: from "test-cases/parse-error-invalid-let-syntax/input", line 1:
| let {
|     ^
|
+-> Syntax error: while parsing let-expression, unexpected '{' while expecting ' ' or '\n'

